<resources>

    <string name="app_name">TNR</string>
    <string name="logInBtn">로그인하기</string>
    <string name="ID">ID</string>
    <string name="Password">Password</string>
    <string name="join">회원가입</string>
    <string name="searchId">아이디 / 비밀번호 찾기</string>
    <string name="nickName">닉네임</string>
    <string name="IDWithEmail">ID(E - mail)</string>
    <string name="confirm">확인</string>
    <string name="joinBtn">가입하기</string>
    <string name="strDone">완료</string>
    <string name="todo">TODO</string>
    <string name="search">검색</string>
    <string name="searchMenuDistrictEx">ex) 용산구, 서대문구, ....</string>
    <string name="searchMenuStreetEx">ex) 서초동, 천호동, ....</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="applyDate">신청 일자</string>
    <string name="OrderDate">접수 일자</string>
    <string name="catStatus">처리 상태</string>
</resources>
