<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="horizontal" android:layout_width="match_parent"
    android:layout_height="80dp"
    android:gravity="center"
    android:layout_gravity="center"
    android:background="#ffffff"
    >

    <RelativeLayout
        android:layout_width="80.00dp"
        android:layout_height="79.5dp"
        android:gravity="center">

        <ImageView
            android:id="@+id/catIv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:scaleType="fitXY"
            app:srcCompat="@mipmap/ic_launcher_round" />
    </RelativeLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="79.5dp"
        android:layout_weight="1"
        android:paddingLeft="10dp">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_weight="1">

            <TextView
                android:text="@string/applyDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="11.25dp"
                android:textStyle="bold"
                android:paddingBottom="5dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/dialogApplyDateTv"
                android:textSize="10dp"/>
        </LinearLayout>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_weight="1">

            <TextView
                android:text="@string/OrderDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="11.25dp"
                android:textStyle="bold"
                android:paddingBottom="5dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/dialogOrderDateTv"
                android:textSize="10dp"/>
        </LinearLayout>


        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_weight="1">

            <TextView
                android:text="@string/catStatus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="11.25dp"
                android:textStyle="bold"
                android:paddingBottom="5dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/dialogStatusTv"
                android:textSize="10dp"/>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="4.5dp"
        android:paddingRight="4.5dp">

        <ImageView
            android:id="@+id/likeIv"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:scaleType="center"
            app:srcCompat="@drawable/ic_like_empty" />
    </LinearLayout>
</LinearLayout>